--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 server.servlet.context-path=/ShopmeAdmin
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 
 spring.jpa.hibernate.ddl-auto=update
